@@ -60,7 +60,11 @@ $listDirn	= $this->state->get('list.direction');
 	<?php endif; ?>
 	<tbody>
 	<?php foreach ($this->items as $i => $item) : ?>
-		<tr class="<?php echo $i % 2 ? 'odd' : 'even';?>">
+		<?php if ($this->items[$i]->state == 0) : ?>
+			<tr class="system-unpublished cat-list-row<?php echo $i % 2; ?>">
+		<?php else: ?>
+			<tr class="cat-list-row<?php echo $i % 2; ?>" >
+		<?php endif; ?>
 			
 			<td class="title">
 			<p>
